# P.R.I.S.M.A-PCB-Recognition-and-Inspection-Serverless-ML-Architecture-

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: endpoints.py  main.py  preprocess.py
model/: pcb_classifier_v1.0.0.onnx
prisma-functions/: function_app.py
web/: index.html
