[project]
name = "prisma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "kaggle>=2.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.30",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.48.0",
]
